--- a/index.css
+++ b/index.css
@@ -3,8 +3,7 @@
   }
   
   body {
-    background-color: #f2f2f2;
-    font-family: "Helvetica", sans-serif;
+    background-color: white;
   }
   
   .container {
