--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@
   }
   
   button {
-    background-color: #4caf50;
+    background-color:#a349a4 ;
     color: white;
     padding: 10px;
     border: none;
@@ -42,7 +42,7 @@
   }
   
   button:hover {
-    background-color: #45a049;
+    background-color: #572364 ;
   }
   
   #total {
